--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,3 +15,18 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+
+  api:
+    build:
+      context: ../backend/foodgram_api
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+volumes:
+  static_value:
+  media_value:
