--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,6 +4,7 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -17,5 +18,15 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+
+      location /api {
+        proxy_pass http://api:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /media/ {
+        root /var/html/;
+    }
 
 }
