setup workflow and readme file

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -14,9 +14,9 @@ services:
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
-      - web
+      - backend
 
-  web:
+  backend:
     build:
       context: ../backend/foodgram_api
       dockerfile: Dockerfile
