second review changes: pep8 imports and etc

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -17,9 +17,7 @@ services:
       - backend
 
   backend:
-    build:
-      context: ../backend/foodgram_api
-      dockerfile: Dockerfile
+    image: ezereul/foodgram:v1.0
     restart: always
     volumes:
       - static_value:/app/backend-static/
