--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -26,7 +26,7 @@ jobs:
     name: Push docker image to Dockerhub
     runs-on: ubuntu-latest
     needs: tests
-    if: ${{ github.ref == 'refs/heads/master }}
+    if: ${{ github.ref == 'refs/heads/master' }}
 
     steps:
       - name: Check out the repo
