--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,9 +8,7 @@ services:
       - ./.env
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: ezereul/foodgram-frontend:v1.0
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
@@ -33,12 +31,13 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
+      - ./frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       - media_value:/var/html/backend-media/
       - static_value:/var/html/backend-static/
     depends_on:
       - frontend
+      - backend
 
 volumes:
   static_value:
