--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -59,7 +59,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            cd foodgram/
+            cd ${{ secrets.HOME_PATH }}
             echo ${{ secrets.SUDO_PASSWORD }} | sudo -S docker-compose stop
             echo ${{ secrets.SUDO_PASSWORD }} | sudo -S docker-compose rm -f backend
             echo ${{ secrets.SUDO_PASSWORD }} | sudo -S docker rmi -f ezereul/foodgram:v1.0
